<resources>
    <string name="app_name">Active Elite Fitness</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="enter_height">Enter Height:</string>
    <string name="enter_weight">Enter Weight:</string>
    <string name="enter_age">Enter Age:</string>

    <string-array name="name">
        <item>Dharmesh</item>
        <item>John</item>
        <item>Timmy</item>
        <item>Drew</item>
    </string-array>

    <string-array name="stuff">
        <item>Dharmesh.com</item>
        <item>John.com</item>
        <item>Timmy.com</item>
        <item>Drew.com</item>
    </string-array>

    <string-array name="numbers">
        <item>432</item>
        <item>543</item>
        <item>856</item>
        <item>867</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <string name="keto_diet" formatted="false">"A keto diet is well known for being a low carb diet, where the body produces ketones in the liver to be used as energy. It’s referred to as many different names – ketogenic diet, low carb diet, low carb high fat (LCHF), etc.

When you eat something high in carbs, your body will produce glucose and insulin.

Glucose is the easiest molecule for your body to convert and use as energy so that it will be chosen over any other energy source.
Insulin is produced to process the glucose in your bloodstream by taking it around the body.
Since the glucose is being used as a primary energy, your fats are not needed and are therefore stored. Typically on a normal, higher carbohydrate diet, the body will use glucose as the main form of energy. By lowering the intake of carbs, the body is induced into a state known as ketosis.

Ketosis is a natural process the body initiates to help us survive when food intake is low. During this state, we produce ketones, which are produced from the breakdown of fats in the liver.

The end goal of a properly maintained keto diet is to force your body into this metabolic state. We don’t do this through starvation of calories but starvation of carbohydrates.

        Our bodies are incredibly adaptive to what you put into it – when you overload it with fats and take away carbohydrates, it will begin to burn ketones as the primary energy source. Optimal ketone levels offer many health, weight loss, physical and mental performance benefits."</string>


    <string name="paleo_diet" formatted="false">"The paleo diet claims that modern humans should eat the same foods that their hunter-gatherer ancestors ate — the way humans were genetically designed to eat before agriculture developed.

The theory is that most modern diseases can be linked to the Western diet and the consumption of grains, dairy and processed foods.

While it’s debatable that this diet is comprised of the same foods your ancestors ate, it is linked to several impressive health benefits.

How it works: The paleo diet emphasizes whole foods, lean protein, vegetables, fruits, nuts and seeds, while avoiding processed foods, sugar, dairy and grains.

Some more flexible versions of the paleo diet also allow for dairy like cheese and butter, as well as tubers like potatoes and sweet potatoes.

Weight loss: Several studies have shown that the paleo diet can lead to significant weight loss and reduced waist size (1, 2, 3, 4).

In studies, paleo dieters have also been shown to automatically eat much fewer carbs, more protein and 300–900 fewer calories per day (1, 2, 3, 4).

Other benefits: The diet seems effective at reducing risk factors for heart disease, such as cholesterol, blood sugar, blood triglycerides and blood pressure (5, 6, 7).

The downside: The paleo diet eliminates whole grains, legumes and dairy. Therefore, it unnecessarily eliminates several healthy and nutritious food groups.

Bottom Line: The paleo diet is based on eating whole foods and avoiding grains and dairy. It has several health benefits, including weight loss."</string>


    <string name="Intermittent_Fasting" formatted="false">"Intermittent fasting is an eating pattern that cycles between periods of fasting and eating.

Rather than restricting the foods you eat, it states when you should eat them.

Therefore, it can be seen as more of an eating pattern than a diet.

The most popular ways to do intermittent fasting are:

The 16/8 method: Involves skipping breakfast and restricting your daily eating period to 8 hours, subsequently fasting for the remaining 16 hours of the day.
The eat-stop-eat method: Involves 24-hour fasts once or twice per week on non-consecutive days.
The 5:2 diet: On two non-consecutive days of the week, you restrict your intake to 500–600 calories. On the five remaining days, you eat like normal.
The warrior diet: Eat small amounts of raw fruits and vegetables during the day and one huge meal at night, basically fasting during the day and feasting at night within a 4-hour window.
How it works: Intermittent fasting is commonly used for weight loss because it leads to relatively easy calorie restriction.

It can make you eat fewer calories overall, as long as you don’t overcompensate by eating much more during the eating periods.

Weight loss: Intermittent fasting is generally very successful for weight loss. It has been shown to cause weight loss of 3–8% over a period of 3–24 weeks, which is a lot compared to most weight loss studies (99, 100).

In addition to causing less muscle loss than standard calorie restriction, it may increase your metabolic rate by 3.6–14% in the short-term (99, 101, 102, 103).

Other benefits: Intermittent fasting may reduce markers of inflammation, cholesterol levels, blood triglycerides and blood sugar levels (104, 105, 106, 107).

Furthermore, intermittent fasting has been linked to increased levels of human growth hormone, improved insulin sensitivity, improved cellular repair and altered gene expressions (108, 109, 110, 111, 112).

Animal studies also suggest that it may help new brain cells grow, lengthen lifespan and protect against Alzheimer’s disease and cancer (113, 114, 115, 116).

The downside: Although intermittent fasting is safe for well-nourished and healthy people, it does not suit everyone.

Some studies have shown it’s not as beneficial for women as it is for men (117, 118).

In addition, some people should avoid fasting. This includes those sensitive to drops in blood sugar levels, pregnant women, breastfeeding moms, teenagers, children and people who are malnourished, underweight or nutrient deficient.

Bottom Line: Intermittent fasting cycles between fasting and eating in various patterns. It is very effective for weight loss and has been linked to numerous health benefits."</string>

</resources>
