<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <RadioGroup
        android:id="@+id/gender_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignStart="@+id/submit">

        <RadioButton
            android:id="@+id/male_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_weight="1"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/height"
        android:layout_alignStart="@+id/height"
        android:layout_below="@+id/height"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="0"/>

    <EditText
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_above="@+id/weight"
        android:layout_alignLeft="@+id/gender_group"
        android:layout_alignStart="@+id/gender_group"
        android:hint="0"/>

    <EditText
        android:id="@+id/textage"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/enter_age"
        android:layout_alignBaseline="@+id/age"
        android:layout_alignBottom="@+id/age"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/age"
        android:layout_alignStart="@+id/age"
        android:hint="0"/>

    <EditText
        android:id="@+id/textWeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/enter_weight"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/weight"
        android:layout_alignLeft="@+id/weight"
        android:layout_alignStart="@+id/weight"
        android:hint="0"/>

    <EditText
        android:id="@+id/textHeight"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/enter_height"
        android:layout_alignBaseline="@+id/height"
        android:layout_alignBottom="@+id/height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/submit" />
</RelativeLayout>

