<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="67dp"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>

        <EditText
            android:id="@+id/results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/height"
            android:layout_alignStart="@+id/height"
            android:layout_below="@+id/height"
            android:layout_marginTop="46dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/weight"
            android:layout_alignLeft="@+id/height"
            android:layout_alignStart="@+id/height"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/age"
            android:layout_alignStart="@+id/age"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/weight"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:onClick="onClick"
            android:text="@string/submit" />
    </RelativeLayout>
